[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://enemies/Skeleton.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 96, 16, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 15.5 )

[node name="Skeleton" type="KinematicBody2D" groups=["AffectedByClock", "AffectedByRosary"]]
collision_layer = 8
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 3 )
enemyName = "Skeleton"
damage = 3
points = 300
hitbox = NodePath("../Hitbox")
drop = "enemy"

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="BoneTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BoneTimer" to="." method="_on_BoneTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
